# authorization-hero

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/flask_authorizer/: __init__.py  authorizer.py
tests/: test_authorizer.py
