[tool.poetry]
name = "flask-authorizer"
version = "0.1.0"
description = "Flask extension for authorization"
readme = "README.md"
license = "MIT"
keywords = ["flask", "authorization"]
packages = [{ include = "flask-authorizer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
