[tool.poetry]
name = "authorization-hero"
version = "0.1.1"
description = "Authorization in Flask"
authors = ["DukeOfRI"]
readme = "README.md"
license = "MIT"
keywords = ["flask", "authorization"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"
isort = "^5.13.2"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
